# truth_tables

./: .gitignore  LICENSE  README.md  pyproject.toml
src/truth_tables/: __init__.py  _ast.py  truth_table.py
truth_tables/: __init__.py  _ast.py  cluegen.py  expr_base.py  grammar.lark  logic_expr.py  parser_lexer.py  q.py  table_maker.py  truth_table.py  utils.py
